# cardgame

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
board/: Cargo.toml
board/src/: lib.rs
common/: Cargo.toml  abilities  abilities.json  abilities.yaml  p1_deck  p2_deck
common/src/: action.rs  board.rs  client.rs  main.rs  p1_deck  p2_deck
server/: Cargo.toml  abilities.yaml
server/src/: action.rs  board.rs  client.rs  gameloop.rs  main.rs  server.rs
src/: Card.rs  Deck.rs  board.rs  card.rs  deck.rs  main.rs
