[package]
name = "cardgame"
version = "0.1.0"
authors = ["kyle merfeld <kmerfeld1@gmail.com>"]

[dependencies]
serde = "1.0.4"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
serde_derive = "1.0.8"
rand = "0.3"
clap = "2.24.2"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

